Desktop layout changes to fix x axis overflow and section height issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,8 @@ section, footer {
   background-color: #000;
   color: #fff;
   position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 
 .full-screen-section {
@@ -54,8 +56,8 @@ section, footer {
 }
 
 .double-screen-section {
-  height: 200vh;
-  min-height: 1500px;
+  height: 150vh;
+  min-height: 1250px;
 }
 
 .half-screen-section {
@@ -96,6 +98,7 @@ right-container {
 
 .section-1 {
   min-height: 1000px;
+  overflow: hidden;
 }
 
 .section-1 left-container {
@@ -206,12 +209,11 @@ right-container {
 
 
 .section-5 img {
-  max-height: 750px;
-  max-width: 458px;
-  height: 100vh;
-  width: 50vw;
-  object-fit: contain;
   float: right;
+  width: auto;
+  height: auto;
+  max-height: 1684px;
+  max-width: 458px;
 }
 
 .section-6 p {
@@ -252,14 +254,14 @@ right-container {
 
 .section-8 right-container {
   align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .section-8 img {
   float: right;
-  margin-top: -101%;
   width: auto;
   height: auto;
-  max-height: 1684px;
+  max-height: 100%;
   max-width: 100%;
 }
 
